# oakilydokily

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  OWNERS.yaml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  railway.toml  run.sh
.github/workflows/: ci.yml
android/: README.md  build-apk.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/oakilydokily/: MainActivity.java  ServerService.java
android/app/src/main/res/values/: styles.xml
assets/: gl.js  manifest.json  mural-bridge.js  mural-test.html  mural-wasm.wasm  sw.js
assets/css/: main.css
content/: resume.html  waiver_terms.txt
data/: waivers.sqlite
docs/: GOOGLE_WORKSPACE_SETUP.md  PRODUCTION.md  QUALITY_CHECKS.md  TEST_SIMULATIONS.md  TRIPLE_SIMS_OAKILYDOKILY.md  TRIPLE_SIMS_THROW_BOOK_OAKILYDOKILY.md  TRIPLE_SIMS_WAIVER.md  compression_map.md
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md  SUPPLY_CHAIN_AUDIT.md
ios/: build-ipa.sh
ios/OakilyDokily/: AppDelegate.swift  Info.plist
mural-claymation/: Cargo.toml
mural-claymation/src/: main.rs
mural-wasm/: Cargo.toml  README.md  build-standalone.sh  index.html  serve.sh
mural-wasm/scripts/: README.md  animal_regions.json  background_only.py  claymation_pipeline.py  fetch_pixel_art.py  requirements.txt
mural-wasm/src/: bridge.rs  landscape.rs  main.rs  pet.rs  scenes.rs  sprites.rs
scripts/: build-all-targets.sh  build-mural.sh  register-approuter.sh  restart-oakilydokily.sh  sim-http.sh  triple-sims.sh
src/: android.rs  d1_auth.rs  ios.rs  lib.rs  main.rs  mock_google.rs  screenshot.rs  waiver.rs
src/tests/: mod.rs
src/web/: assets.rs  auth.rs  email.rs  forge.rs  govdocs.rs  head.rs  mod.rs  pages.rs  router.rs  waiver.rs
test-fixtures/: mock-sa.json
