# Unlicense — cochranblock.org
# Contributors: Mattbusel (XFactor), GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3

[package]
name = "oakilydokily"
version = "0.2.0"
edition = "2021"
default-run = "oakilydokily"
description = "Veterinary professional services site — ESIGN-compliant waivers, multi-auth, zero-cloud single binary"
license = "Unlicense"
repository = "https://github.com/cochranblock/oakilydokily"
keywords = ["veterinary", "waiver", "esign", "axum", "zero-cloud"]
categories = ["web-programming::http-server"]

# tests = rough draft. exopack for quantifiable quality. Release strips both.
# approuter = register with approuter on startup. Release binary only; -test never gets approuter-client.
[features]
default = []
tests = ["exopack", "colored", "scraper"]
approuter = ["dep:approuter-client"]
android = ["dep:jni"]

[lib]
name = "oakilydokily"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

# Release binary: product only. Requires --features approuter.
[[bin]]
name = "oakilydokily"
path = "src/main.rs"
required-features = ["approuter"]

# Test binary: full. AI iterates, then strips for release. Never gets approuter-client.
[[bin]]
name = "oakilydokily-test"
path = "src/bin/oakilydokily-test.rs"
required-features = ["tests"]

[dependencies]
axum = { version = "0.7", features = ["form", "json"] }
tower-http = { version = "0.5", features = ["compression-gzip", "compression-deflate", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "process"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
urlencoding = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
approuter-client = { git = "https://github.com/cochranblock/approuter", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }
jsonwebtoken = "9"
dotenvy = "0.15"
bcrypt = "0.17"
flate2 = "1"
dirs = "5"
colored = { version = "2", optional = true }
jni = { version = "0.21", optional = true }
scraper = { version = "0.19", optional = true }
exopack = { git = "https://github.com/cochranblock/exopack", optional = true, features = ["screenshot", "interface", "triple_sims", "devtools"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
proptest = "1"